--- a/src/app/orientador/orientador.component.html
+++ b/src/app/orientador/orientador.component.html
@@ -24,7 +24,7 @@
 						<button class="btn btn-dark" routerLink="meus-semestres">Meus Semestres</button>
 					</div>
 					<div class="col-sm-2">
-						<button class="btn btn-dark">teste</button>
+						<button class="btn btn-dark" routerLink="plano-disciplinas">Plano de Disciplinas</button>
 					</div>
 				</div>
 				<!-- vou colocar essa div de baixo pra aparecer dps que clicar no "bem vindo fulano"-->
