new button layout

--- a/src/app/home/boas-vindas/boas-vindas.component.html
+++ b/src/app/home/boas-vindas/boas-vindas.component.html
@@ -5,7 +5,7 @@
 			<p class="lead">Este é o portal do curso de Tecnologia da Informação da Universidade Federal do Rio Grande do Norte.</p>
 			<p class="lead">Ainda não é aluno e tem interesse no curso? Faça um tour clicando no botão abaixo e você encontrará tudo o que é necessário para ingressar.</p>
 			<div class="tour">
-				<a class="lead tour-btn-text" href="tour"><button class="btn btn-tour">Faça um Tour!</button></a>
+				<a class="lead tour-btn-text" routerLink="/tour"><button class="btn btn-tour">Faça um Tour!</button></a>
 			</div>
 		</div>
 		<div class="col-md-6 col-lg-4 login">
