--- a/src/app/home/boas-vindas/boas-vindas.component.css
+++ b/src/app/home/boas-vindas/boas-vindas.component.css
@@ -16,9 +16,10 @@
 
 .btn-tour {
 	color: white;
-	background-color: transparent;
+	background-color: rgba(255,255,255,0.1);
 	border: solid white 2px;
 	border-radius: 5px;
+	box-shadow: 1px 1px 5px black;
 	width: 100%;
 	max-width: 510px;
 	
@@ -32,6 +33,10 @@
 	.btn-tour {
 		margin-bottom: 100px;
 	}
+}
+
+.tour-btn-text {
+	text-shadow: 1px 1px 5px black;
 }
 
 .login {
